--- a/Mw3 Fix Online/MainWindow.xaml
+++ b/Mw3 Fix Online/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="Mw3_Fix_Online.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Mw3_Fix_Online"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<mah:MetroWindow x:Class="Mw3_Fix_Online.MainWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 xmlns:views="clr-namespace:Mw3_Fix_Online.Views"
+                 mc:Ignorable="d"
+                 WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
+                 Title="{DynamicResource title}" TitleCharacterCasing="Normal"
+                 Height="580" Width="350">
     <Grid>
-        
+        <views:MainView/>
     </Grid>
-</Window>
+</mah:MetroWindow>
